--- a/ansible/roles/slave/tasks/slave_Darwin.yml
+++ b/ansible/roles/slave/tasks/slave_Darwin.yml
@@ -27,6 +27,7 @@
     dest: homebrew
     accept_hostkey: "{{ 'yes' if testing is defined else 'no' }}"
     force: yes
+    depth: 1
   when: not brew_exec.stat.exists
 
 - name: Install homebrew
