--- a/ansible/roles/www/tasks/dolweb.yml
+++ b/ansible/roles/www/tasks/dolweb.yml
@@ -36,6 +36,7 @@
     dest: www
     accept_hostkey: "{{ 'yes' if testing is defined else 'no' }}"
     force: yes
+    depth: 1
   notify: restart supervisor
 
 ##
