windows: Use buildbot_path when installing symbol store utility

--- a/ansible/roles/slave/tasks/slave_Windows.yml
+++ b/ansible/roles/slave/tasks/slave_Windows.yml
@@ -73,7 +73,7 @@
 - name: Install buildbot symbol store utility
   win_copy:
     src: files/storesymbols.bat
-    dest: c:/buildbot/storesymbols.bat
+    dest: "{{ buildbot_path  }}\\storesymbols.bat"
   tags: buildbot
 
 ##
